--- a/src/main/resources/MainWindow.fxml
+++ b/src/main/resources/MainWindow.fxml
@@ -6,12 +6,11 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
 <HBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.sda.ui.MainWindowController">
    <children>
       <VBox prefHeight="400.0" prefWidth="178.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" text="Dodaj książkę" />
+            <Button mnemonicParsing="false" onAction="#otworzOknoDodawaniaNowejKsiazki" prefHeight="25.0" prefWidth="147.0" text="Dodaj książkę" />
             <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="147.0" text="Dodaj użytkownika" />
          </children>
       </VBox>
